[gd_scene load_steps=21 format=3 uid="uid://7g4c3tvpoc7s"]

[ext_resource type="Texture2D" uid="uid://7j4ntxo7b2vr" path="res://Assets/Mob/Animals/SheepIdle.png" id="1_at5a8"]
[ext_resource type="Texture2D" uid="uid://dpjmtvxm48c4i" path="res://Assets/Mob/Animals/SheepWalk.png" id="1_ds0cx"]
[ext_resource type="Script" path="res://Script/sheep.gd" id="1_qy8fh"]
[ext_resource type="PackedScene" uid="uid://u1c5f46h7bjw" path="res://Scene/Ressources.tscn" id="4_sqx0u"]
[ext_resource type="PackedScene" uid="uid://dkyhx4d2g2xt3" path="res://Scene/Shadow.tscn" id="5_5irlw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ljrxs"]
atlas = ExtResource("1_at5a8")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bves0"]
atlas = ExtResource("1_at5a8")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ub8o"]
atlas = ExtResource("1_at5a8")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_whh2x"]
atlas = ExtResource("1_at5a8")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q0v8h"]
atlas = ExtResource("1_ds0cx")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8w80n"]
atlas = ExtResource("1_ds0cx")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xj8rd"]
atlas = ExtResource("1_ds0cx")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qm80h"]
atlas = ExtResource("1_ds0cx")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tglcy"]
atlas = ExtResource("1_ds0cx")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ipit"]
atlas = ExtResource("1_ds0cx")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_pfe4j"]
animations = [{
"frames": [{
"duration": 4.0,
"texture": SubResource("AtlasTexture_ljrxs")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_bves0")
}, {
"duration": 10.0,
"texture": SubResource("AtlasTexture_ljrxs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ub8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_whh2x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ub8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_whh2x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ub8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_whh2x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ub8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_whh2x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ub8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_whh2x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ub8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_whh2x")
}, {
"duration": 4.0,
"texture": SubResource("AtlasTexture_ljrxs")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q0v8h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8w80n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xj8rd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qm80h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tglcy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ipit")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5clxc"]
size = Vector2(15, 14)

[sub_resource type="CircleShape2D" id="CircleShape2D_74whs"]
radius = 13.0384

[sub_resource type="Curve" id="Curve_0o5iq"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_065sf"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.548781, 0.926829)
colors = PackedColorArray(0.54902, 0.137255, 0.113725, 1, 1, 0.789848, 0.709185, 1, 0.875405, 0.889338, 0.894044, 1)

[node name="Sheep" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 15
script = ExtResource("1_qy8fh")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_pfe4j")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, -1)
shape = SubResource("RectangleShape2D_5clxc")

[node name="ZoneContact" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZoneContact"]
position = Vector2(-1, 0)
shape = SubResource("CircleShape2D_74whs")

[node name="Ressources" parent="." instance=ExtResource("4_sqx0u")]
ressource = 3
pv_max = 60.0

[node name="Particles" type="CPUParticles2D" parent="."]
position = Vector2(-1, 5)
emitting = false
amount = 30
lifetime = 0.25
one_shot = true
explosiveness = 0.83
direction = Vector2(0, -1)
spread = 50.0
gravity = Vector2(0, 2500)
initial_velocity_min = 200.0
initial_velocity_max = 500.0
scale_amount_max = 7.0
scale_amount_curve = SubResource("Curve_0o5iq")
color_initial_ramp = SubResource("Gradient_065sf")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Shadow" parent="." node_paths=PackedStringArray("mob_sprite") instance=ExtResource("5_5irlw")]
position = Vector2(0, 13)
mob_sprite = NodePath("../Sprite")

[connection signal="body_entered" from="ZoneContact" to="." method="_on_zone_contact_body_entered"]
[connection signal="body_shape_entered" from="ZoneContact" to="." method="_on_zone_contact_body_shape_entered"]
[connection signal="destroy_signal" from="Ressources" to="." method="_on_ressources_destroy_signal"]
[connection signal="hit_signal" from="Ressources" to="." method="_on_ressources_hit_signal"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
